<resources>
    <string name="app_name">Movie Lists</string>
    <string name="title_overview">Overview</string>
    <string name="user_score">User\nscore</string>
    <string name="title_genres">Genres</string>
    <string name="title_not_now">Not now</string>
    <string name="action_login_as_guest">Login As Guest</string>
    <string name="title_recommend">Recommend</string>
    <string name="action_create_account">Create Account</string>
    <string name="msg_email_example">example@email.com</string>
    <string name="msg_password">********</string>
    <string name="action_logout">Logout</string>
    <string name="msg_user_has_signed_out">User has signed out.</string>
    <string name="msg_user_has_signed_in">User has signed in</string>
    <string name="msg_password_not_match">Password not match</string>
    <string name="title_password">Password</string>
    <string name="title_retype_password">Retype Password</string>
    <string name="title_email">Email</string>
    <string name="title_setting">Setting</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="action_login">Login</string>
    <string name="action_go_to_favorite">Favorite List</string>
    <string name="title_app_language">App Language</string>
    <string name="cancel">Cancel</string>

    <string name="title_select_your_language">Select your language</string>
    <string name="title_english">English</string>
    <string name="title_thailand">Thailand</string>
    <string-array name="choose_language">
        <item>English</item>
        <item>Thailand</item>
    </string-array>
</resources>
